--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,15 @@ body{
   background-image: url("../images/pattern-background-desktop.svg");
 }
 
+.centering-container{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .order-summary-card{
   display: flex; 
   flex-direction: column; 
